Update and rename README.md to README.md.jinja2

--- a/{{cookiecutter.project_name}}/README.md.jinja2
+++ b/{{cookiecutter.project_name}}/README.md.jinja2
@@ -1,4 +1,12 @@
+{# Optional Logo Hero #}
+<p align="center">
+  <img src="docs/_static/logo.png" alt="{{ cookiecutter.project_name }} logo" width="200"/>
+</p>
+
 # {{ cookiecutter.friendly_name }}
+
+<p align="center"><em>{{ cookiecutter.project_short_description }}</em></p>
+---
 
 [![PyPI](https://img.shields.io/pypi/v/{{cookiecutter.project_name}}.svg)][pypi status]
 [![Status](https://img.shields.io/pypi/status/{{cookiecutter.project_name}}.svg)][pypi status]
